--- a/index.html
+++ b/index.html
@@ -7,8 +7,61 @@
     <link rel="stylesheet" href="scss/main.css">
 </head>
 <body>
-    <h1>Проект запущен!</h1>
-    
+
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a href="#">MyLogo</a>
+                <nav>
+                    <a href="#" style="margin-left: 15px;">Главная</a>
+                    <a href="#" style="margin-left: 15px;">О нас</a>
+                    <a href="#" style="margin-left: 15px;">Контакты</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section style="padding: 60px 0;">
+            <div class="container">
+
+                <h1>Проект запущен!</h1>
+                
+                <h2 style="text-align: center; margin-bottom: 30px;">Тест компонентов</h2>
+
+                <div style="text-align: center; margin-bottom: 40px;">
+                    <button class="btn">Акцентная кнопка</button>
+                    <button class="btn btn--primary">Основная кнопка</button>
+                    <button class="btn btn--outline">Контурная кнопка</button>
+                </div>
+
+                <form style="max-width: 500px; margin: 0 auto;">
+                    <div class="form-group">
+                        <label for="name" class="form-label">Ваше имя</label>
+                        <input type="text" id="name" class="form-control" placeholder="Введите ваше имя">
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" id="email" class="form-control" placeholder="Введите ваш email">
+                    </div>
+                    <div class="form-group">
+                        <label for="message" class="form-label">Сообщение</label>
+                        <textarea id="message" class="form-control" rows="4" placeholder="Ваше сообщение"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn--primary">Отправить</button>
+                </form>
+
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="container" style="text-align: center;">
+            <p>&copy; 2025 Мой новый проект. Все права защищены.</p>
+        </div>
+    </footer>
+
     <script type="module" src="js/main.js"></script>
+
 </body>
 </html>
