--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
                     <a href="https://udifish.check-it.co.il/" target="_blank" class="portfolio-card">
                         <figure class="portfolio-card__figure">
+                            <div class="background" style="background-image: url('img/udi.webp');"></div>
                             <img src="img/udi.webp" alt="Udi Fish">
                             <div class="portfolio-card__figure-hover">
                                 <p>Here is description</p>
@@ -67,6 +68,7 @@
 
                     <a href="https://imaginespaces.ai/" target="_blank" class="portfolio-card">
                         <figure class="portfolio-card__figure">
+                            <div class="background" style="background-image: url('img/imagenpaces.webp');"></div>
                             <img src="img/imagenpaces.webp" alt="Imagenpaces">
                             <div class="portfolio-card__figure-hover">
                                 <p>Here is description</p>
@@ -79,6 +81,7 @@
 
                     <a href="https://www.kisu.co.il/" target="_blank" class="portfolio-card">
                         <figure class="portfolio-card__figure">
+                            <div class="background" style="background-image: url('img/kisu.webp');"></div>
                             <img src="img/kisu.webp" alt="KISU">
                             <div class="portfolio-card__figure-hover">
                                 <p>Here is description</p>
